k8s/api-alias-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: music-api
  namespace: default
  labels:
    app: music-api
spec:
  type: ClusterIP
  selector:
    app: music-api
  ports:
  - name: http
    protocol: TCP
    port: 8000
    targetPort: 8000
